# dbt-duckdb-poetry

./: .gitignore  .pre-commit-config.yaml  .tool-versions  README.md  dbt_project.yml  jaffle_shop.duckdb  profiles.yml  pyproject.toml
.github/workflows/: lint_models.yml
models/: customers.sql  orders.sql
models/staging/: stg_customers.sql  stg_orders.sql  stg_payments.sql
