[tool.poetry]
name = "jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Dimitar Vanguelov <dvanguelov@gmail.com>"]
readme = "README.md"
packages = [{include = "jaffle_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.6.5"
dbt-duckdb = "^1.6.0"


[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.3.2"
duckcli = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
