[tool.poetry]
name = "jaffle-shop"
version = "0.1.0"
description = ""
authors = ["Dimitar Vanguelov <dvanguelov@gmail.com>"]
readme = "README.md"
packages = [{include = "jaffle_shop"}]

[tool.poetry.dependencies]
python = "^3.10"
dbt-core = "^1.6.5"
dbt-duckdb = "^1.6.0"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^2.3.2"
pre-commit = "^3.4.0"
duckcli = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.sqlfluff.core]
templater = "jinja"
sql_file_exts = ".sql"
max_line_length = 100

[tool.sqlfluff.indentation]
indented_joins = false
indented_using_on = true
template_blocks_indent = false
tab_space_size = 2
indent_unit = "space"

[tool.sqlfluff.templater]
unwrap_wrapped_queries = true

[tool.sqlfluff.templater.jinja]
apply_dbt_builtins = true

[tool.sqlfluff.rules.capitalisation.keywords]
capitalisation_policy = "lower"

[tool.sqlfluff.layout.type.comma]
line_position = "leading"
